src/test/resources/Parser/SyntaxErrors/DynamicCallWithKeywordArgs.front
class A:
    static f(i: int32) {}

    static test() {
        fun := f**;
        fun(i=2);
    }